# ML_uber_ride_prediction

./: LICENSE  MLmodel.ipynb  model.pkl  pyproject.toml
static/: style.css
